--- a/Monopoli/pom.xml
+++ b/Monopoli/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.43.2.2</version>
+    </dependency>
   </dependencies>
 
   <build>
