--- a/Monopoli/pom.xml
+++ b/Monopoli/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.43.2.2</version>
     </dependency>
+    <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.11.0</version>
+	</dependency>
   </dependencies>
 
   <build>
