--- a/Monopoli/pom.xml
+++ b/Monopoli/pom.xml
@@ -45,6 +45,12 @@
     <artifactId>gson</artifactId>
     <version>2.11.0</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-forms -->
+<dependency>
+    <groupId>com.jgoodies</groupId>
+    <artifactId>jgoodies-forms</artifactId>
+    <version>1.9.0</version>
+</dependency>
   </dependencies>
 
   <build>
